# tp-behavioural-types

./: Cargo.toml  README.md
src/: file_client.rs  file_server.rs  main.rs
src/client/: client1.rs  client2.rs  main.rs
src/server/: main.rs  server.rs  server_worker.rs
