[package]
name = "tp-behavioural-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client1"
path = "src/client/client1.rs"

[dependencies]
typestate = "0.8.0"
